# Wireframe-Core

./: .build.cmake  .gitmodules  CMakeLists.txt  README.md
include/: Allocator.hpp  BuildInfo.hpp  Compare.hpp  Core.hpp  Debug.hpp  Defines.hpp  DynamicLib.hpp  Event.hpp  Exception.hpp  Files.hpp  Hash.hpp  IO.hpp  Job.hpp  Map.hpp  Math.hpp  Matrix4x4.hpp  Memory.hpp  Mutex.hpp  New.hpp  Pair.hpp  Platform.hpp  Quaternion.hpp  Runner.hpp  Semaphore.hpp  Set.hpp  String.hpp  Thread.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  map.hpp  set.hpp  string.hpp  unordered_map.hpp  vector.hpp
src/: Allocator.cpp  Debug.cpp  Event.cpp  Files.cpp  Hash.cpp  IO.cpp  Job.cpp  Math.cpp  Matrix4x4.cpp  Memory.cpp  Quaternion.cpp  String.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  string.cpp
src/Platform/Linux/: DynamicLib.cpp  Files.cpp  Memory.cpp  PlatformMemory.cpp  Thread.cpp
src/Platform/Windows/: DynamicLib.cpp  Files.cpp  Memory.cpp  Mutex.cpp  PlatformMemory.cpp  Semaphore.cpp  Thread.cpp
test/: Tests.hpp  UnitTests.cpp  UnitTests.hpp  main.cpp
test/Tests/: MapTests.cpp  MemoryTests.cpp  SetTests.cpp  StringTests.cpp  UnorderedMapTests.cpp  UnorderedSetTests.cpp  VectorTests.cpp
